# clay

./: Cargo.toml  LICENSE  test.clay
clay/: Cargo.toml
clay/src/: clay.rs  main.rs
clay/src/clay/: example.clay  var.rs
clay/src/clay/parse/: mod.rs
clay/src/clay/prelude/: io.rs  math.rs  mod.rs
clay/src/clay/prelude/objects/: array.rs  future.rs  mod.rs  string.rs
clay/src/clay/prelude/objects/func/: coro.rs  script.rs
clay/src/clay/vm/: env.rs  error.rs  gc.rs  mod.rs  runtime.rs  signal.rs
src/: clay.rs  main.rs
src/clay/: example.clay  var.rs
src/clay/co/: asymmetric.rs  asymmetric_builder.rs  environment.rs  lib.rs  symmetric.rs
src/clay/parse/: __mod.rs  clay.rs  mod.rs  parser.pest  t2c.rs
src/clay/prelude/: debug.rs  io.rs  math.rs  mod.rs  repl.rs  to_str.rs
src/clay/prelude/objects/: args.rs  array.rs  func.rs  future.rs  lambda.rs  method.rs  mod.rs  module.rs  native.rs  object.rs  string.rs  undef.rs
src/clay/prelude/objects/func/: args.rs  mod.rs  script.rs
src/clay/var/: array.rs  boolean.rs  float.rs  func.rs  future.rs  int.rs  lambda.rs  list.rs  mod.rs  object.rs  string.rs  undef.rs
src/clay/var/func/: args.rs  coro.rs  mod.rs  native.rs  script.rs
src/clay/var/func/coro/: code_runner.rs  mod.rs
src/clay/vm/: ctx.rs  env.rs  error.rs  gc.rs  heap.rs  keys.rs  mod.rs  promise.rs  runtime.rs  signal.rs
