[package]
name = "clay"
version = "0.1.0"
edition = "2021"

[dependencies]
# generator = "0.8"
# num-bigint = "0.4"
# num-traits = "0.2"

stackful = "0.1.5"

only = { path = "/home/unruled/desktop/only" }

#coroutine = "0.8"
# corosensei = "0.1.4"

# tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

#tokio-stream = "0.1"
#futures = "0.3"
#pest = "2.6"
#pest_derive = "2.6"

#lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

#[build-dependencies] # <-- We added this and everything after!
#lalrpop = "0.20.2"